Missing lib for linker

--- a/clang/tools/statinf-get-functions-list/CMakeLists.txt
+++ b/clang/tools/statinf-get-functions-list/CMakeLists.txt
@@ -16,4 +16,5 @@ clang_target_link_libraries(statinf-get-functions-list
   clangFrontend
   clangTooling
   clangToolingSyntax
+  libstatinfclang
   )
